--- a/src/content/css/default.css
+++ b/src/content/css/default.css
@@ -385,3 +385,125 @@ button:focus, button:active, button:hover{
     font-size:20px;
     padding: 10px 20px;
 }
+
+
+
+
+
+
+
+
+
+.frb-group {
+    margin: 0;
+}
+.fbr label {
+    padding: 10px 0;
+}
+
+.frb input[type="radio"]:empty,
+.frb input[type="checkbox"]:empty {
+    display: none;
+}
+
+.frb input[type="radio"] ~ label:before,
+.frb input[type="checkbox"] ~ label:before {
+    font-family: 'Glyphicons Halflings';
+    content: "\e157";
+    position: absolute;
+    top: 50%;
+    margin-top: -11px;
+    left: 15px;
+    font-size: 22px;
+}
+
+.frb input[type="radio"]:checked ~ label:before,
+.frb input[type="checkbox"]:checked ~ label:before {
+    content: "\e013";
+}
+
+.frb input[type="radio"] ~ label,
+.frb input[type="checkbox"] ~ label {
+    position: relative;
+    cursor: pointer;
+    width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+}
+
+.frb input[type="radio"] ~ label:focus,
+.frb input[type="radio"] ~ label:hover,
+.frb input[type="checkbox"] ~ label:focus,
+.frb input[type="checkbox"] ~ label:hover {
+    box-shadow: 0px 0px 3px #333;
+}
+
+.frb input[type="radio"]:checked ~ label,
+.frb input[type="checkbox"]:checked ~ label {
+    color: #fafafa;
+}
+
+.frb input[type="radio"]:checked ~ label,
+.frb input[type="checkbox"]:checked ~ label {
+    background-color: #f2f2f2;
+}
+
+.frb.frb-default input[type="radio"]:checked ~ label,
+.frb.frb-default input[type="checkbox"]:checked ~ label {
+    color: #333;
+}
+
+.frb.frb-primary input[type="radio"]:checked ~ label,
+.frb.frb-primary input[type="checkbox"]:checked ~ label {
+    background-color: #337ab7;
+}
+
+.frb.frb-success input[type="radio"]:checked ~ label,
+.frb.frb-success input[type="checkbox"]:checked ~ label {
+    background-color: #5cb85c;
+}
+
+.frb.frb-info input[type="radio"]:checked ~ label,
+.frb.frb-info input[type="checkbox"]:checked ~ label {
+    background-color: #5bc0de;
+}
+
+.frb.frb-warning input[type="radio"]:checked ~ label,
+.frb.frb-warning input[type="checkbox"]:checked ~ label {
+    background-color: #f0ad4e;
+}
+
+.frb.frb-danger input[type="radio"]:checked ~ label,
+.frb.frb-danger input[type="checkbox"]:checked ~ label {
+    background-color: #d9534f;
+}
+
+.frb input[type="radio"]:empty ~ label p,
+.frb input[type="checkbox"]:empty ~ label p {
+    display: inline-block;
+}
+
+.frb input[type="radio"]:empty ~ label p.frb-title,
+.frb input[type="checkbox"]:empty ~ label p.frb-title {
+    font-size: 16px;
+    font-weight: 700;
+    margin-top:15px;
+}
+
+.frb input[type="radio"]:empty ~ label p.frb-description,
+.frb input[type="checkbox"]:empty ~ label p.frb-description {
+    font-weight: normal;
+    font-style: italic;
+    color: #333746;
+}
+
+.frb input[type="radio"]:empty:checked ~ label p.frb-description,
+.frb input[type="checkbox"]:empty:checked ~ label p.frb-description {
+    color: #fafafa;
+}
+
+.frb.frb-default input[type="radio"]:empty:checked ~ label p.frb-description,
+.frb.frb-default input[type="checkbox"]:empty:checked ~ label p.frb-description {
+    color: #333746;
+}
