--- a/src/content/css/msvhost.css
+++ b/src/content/css/msvhost.css
@@ -24,6 +24,58 @@
     font-style: italic;
 }
 
+.content-block {
+    background: #ffffff;
+    border-radius: 6px;
+    padding: 50px;
+}
+
+.content-offset {
+    margin-top:90px;
+    margin-bottom:100px;
+}
+
+#submenu-user {
+    position:absolute;
+    background:#fff;
+    width: 200px;
+    margin-left: 15px;
+    margin-top: 18px;
+}
+
+.thumbnail {
+    overflow: hidden;
+    min-height: 380px;
+}
+
+.thumbnail-overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(116, 196, 212, 0.8);
+    background: linear-gradient(to bottom, rgba(116, 196, 212, 0.9), rgba(116, 196, 212, 0.5));
+    overflow: hidden;
+    width: 100%;
+    height:0;
+    transition: 0.4s ease;
+}
+.thumbnail-text {
+    color: white;
+    text-shadow: 0px 1px #74c4d4;
+    font-size: 16px;
+    position: absolute;
+    overflow: hidden;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+}
+.thumbnail-hover:hover .thumbnail-overlay {
+    bottom: 0;
+    height: 100%;
+}
+
 
 .frb-group {
     margin: 0;
